force-app/main/default/objects/VCC_Mock_SSO_Settings__c/VCC_Mock_SSO_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>3yUCBOTzK0EL8wQA0YTHhJuCKxKRAms85021SngZ</description>
    <label>Mock SSO Settings</label>
</CustomObject>