force-app/main/default/objects/VCC_Mock_SSO_Settings__c/fields/VCC_DUZ__c.field-meta.xml
<CustomField>
    <fullName>VCC_DUZ__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The DUZ associated with your token.</inlineHelpText>
    <label>DUZ</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>