force-app/main/default/objects/VCC_Mock_SSO_Settings__c/fields/VCC_SSO_Token__c.field-meta.xml
<CustomField>
    <fullName>VCC_SSO_Token__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>foRfS19hepElqjg5UvDpDzX9Hr6437kYQfCI9zdw</inlineHelpText>
    <label>SSO Token</label>
    <length>60</length>
    <required>true</required>
    <type>Text</type>
</CustomField>