force-app/main/default/objects/VCC_Mock_SSO_Settings__c/fields/VCC_VistA_Instance__c.field-meta.xml
<CustomField>
    <fullName>VCC_VistA_Instance__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The facility you plan on signing a note to.</inlineHelpText>
    <label>VistA Instance</label>
    <length>4</length>
    <required>true</required>
    <type>Text</type>
</CustomField>